kubernetes/rabbitmq/base/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: lab-rabbitmq
          image: rabbitmq:3-management
          livenessProbe:
            exec:
              command:
                - rabbitmq-diagnostics -q ping
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 30
          ports:
            - containerPort: 15672
              protocol: TCP
            - containerPort: 5672
              protocol: TCP
          volumeMounts:
            - mountPath: "/var/lib/rabbitmq"
              name: volume
              readOnly: false
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "pubsub-keyvault"
      restartPolicy: Always
