kubernetes/rabbitmq/base/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: ""
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
      - pathType: Prefix
        path: /*
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
